@@ -1,4 +1,5 @@
-/* Copyright (C) 1991-2015 Free Software Foundation, Inc.
+/* uname -- Report basic information about the system.  Generic version.
+   Copyright (C) 1991-2015 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -20,8 +21,8 @@
 #include <sys/utsname.h>
 #include <unistd.h>
 
-/* This file is created by the configuration process, and defines UNAME_*.  */
-#include <config-name.h>
+/* This file defines UNAME_* to string constants.  */
+#include <uname-values.h>
 
 /* Put information about the system in NAME.  */
 int
